jars configuration