@@ -3,3 +3,8 @@ String greeting = "Welcome to world of Java 21";
 void main() {
     System.out.println(greeting);
 }
+
+
+//STEPS TO COMPILE UNNAMED CLASSES
+//javac --release 21 --enable-preview UnNamedClass.java
+//java --enable-preview UnNamedClass
